# rp2350_gpu_250610

./: CMakeLists.txt  LICENSE  areil5x8_font.h  command_factory.hpp  common.cpp  common.h  dt300cpp_00.cpp  edit.h  i2c_obj.hpp  image.cpp  keyboard.cpp  label.cpp  screen.h  screenManager.cpp  screenManager.hpp  sprite.cpp  sprite.h  term6x9_font.h  widget.cpp
docs/: Value Store & I²c Change-tracking + Widget Wiring — Phased Development Plan.odt  codeExplanations.txt  core1_functions.txt  design01.txt  i2dDesign01.md  notes.txt  st7565_commands.ods  trace02.txt  trace_250810.ods  trace_to_excel.py  uml01.dia  uml01.dia~  uml02.dia  uml03.dia  widgets01.ods
examples/rp2040_ui_demo/: CMakeLists.txt  main.cpp
examples/rp2040_ui_demo/demos/: screens_demo.cpp  ui_demo.cpp  ui_demo_impl.cpp  valueStore_demo.cpp  valueStore_demo_impl.cpp  vs_demo.cpp  vs_demo_impl.cpp  vs_demo_old.cpp
examples/rp2040_ui_demo/demos/include/: screens_demo.h  ui_demo.h  valueStore_demo.h
examples/rp2040_ui_demo/screens/: basicscreen.h  settingsscreen.h  testscreen.cpp  testscreen.h
examples/rp2040_ui_demo/screens/include/: aboutscreen.h  basicscreen.h  menuscreen.h  settingsscreen.h  splashscreen.h  testscreen.h
examples/rp2040_ui_demo/screens/src/: aboutscreen.cpp  basicscreen.cpp  menuscreen.cpp  settingsscreen.cpp  splashscreen.cpp  testscreen.cpp
lib/: CMakeLists.txt
lib/include/: aboutscreen.h  basicscreen.h  button.h  command_factory.hpp  common.h  debug.h  display.h  edit.h  framebuffer.h  funkV16_font.h  i2c_common.h  i2c_obj.hpp  image.h  intmath.h  keyboard.h  label.h  logoSprite.h  menu.h  menuscreen.h  screen.h  screenManager.hpp  settingsscreen.h  splashscreen.h  sprite.h  sys_status.hpp  testscreen.h  value_store.h  widget.h  widgetDescriptor.hpp
lib/src/: aboutscreen.cpp  basicscreen.cpp  button.cpp  command_factory.cpp  common.cpp  debug.cpp  display.cpp  edit.cpp  framebuffer.cpp  i2c_common.cpp  i2c_obj.cpp  keyboard.cpp  label.cpp  menu.cpp  menuscreen.cpp  screen.cpp  screenManager.cpp  testscreen.cpp  value_store.cpp  widget.cpp
screens/: aboutscreen.h  basicscreen.h  menuscreen.h  settingsscreen.cpp  settingsscreen.h  splashscreen.cpp  splashscreen.h  testscreen.h
